<resources>
    <string name="app_name">cmpt370–9mare</string>
    <string name="main_calendar">cmpt370-calendar</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="hello">hello</string>
    <string name="action_user_dropdown_menu">action_user_dropdown_menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">List of Events</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="create_event">create_event</string>
    <string name="search">search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="new_event_title">New Event</string>
    <string name="add">Add</string>
    <string name="next_month_calendar">next_month_calendar</string>
    <string name="title">title</string>
    <string name="location">Location</string>
    <string name="all_day">All-Day</string>
    <string name="Start">Starts</string>
    <string name="chosen_day">Mar 8, 2022</string>
    <string name="time">10:25 AM</string>
    <string name="date">Mar 10,2022</string>
    <string name="end">Ends</string>
    <string name="repeat">Repeat</string>
    <string name="URL">URL</string>
    <string name="notes">Notes</string>
    <string name="add_new_item">New Event</string>
    <string name="never">Never</string>
    <string name="everyday">Every Day</string>
    <string name="everyweek">Every Week</string>
    <string name="every2week">Every 2 Weeks</string>
    <string name="everyyear">Every Year</string>
    <string name="everymonth">Every Month</string>
    <string name="Event_created">New Event has been created</string>
    <string name="dot_image">dot_image</string>
    <string name="nothing">nothing</string>


    <!--    Timer picker-->
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected">" "</string>
    <string name="time_current">The Time is:</string>
    <string name="pick_date">Date:</string>
    <string name="pick_time">Time:</string>
    <string name="button_last_month">description last month</string>
    <string name="description">Description</string>
    <string name="update_button_text">Update</string>
    <string name="modify_event_title">Modify Event</string>
    <string name="connecting_word">To</string>
    <string name="future_events">Future</string>
    <string name="past_events">Past</string>
    <string name="all_events">All Events</string>
    <string name="forward_button">forward_button</string>
    <string name="delete">Delete</string>
    <string name="calendar_app_notification_id" translatable="false">event_channel</string>
    <string name="calendar_app_notification_channel_name" translatable="true">Event</string>
    <string name="snooze">Snooze</string>
    <string name="notification_title">Event Title</string>
    <string name="event_coming_up">Notice! event coming up</string>

    <string-array name="RepeatEvery">
        <item>Repeat Every</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="RepetitionInterval">
        <item>Interval</item>
        <item>Day(s)</item>
        <item>Week(s)</item>

    </string-array>


</resources>