<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_new_event_fragment"
    tools:context=".ui.event.NewEventFragment">

    <data>
        <variable
            name="newEventFragment"
            type="com.example.cmpt370_9mare.ui.event.NewEventFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearRepeat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearRepeat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_event_never"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/never"
                android:onClick="@{()-> newEventFragment.onSelectRepeatNever()}"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="30dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/new_event_everyday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:onClick="@{()-> newEventFragment.onSelectRepeatEveryDay()}"
                android:text="@string/everyday"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="30dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/new_event_every_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:onClick="@{()-> newEventFragment.onSelectRepeatEveryWeek()}"
                android:text="@string/everyweek"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="30dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/new_event_every_2week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:onClick="@{()-> newEventFragment.onSelectRepeatEvery2Weeks()}"
                android:text="@string/every2week"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/new_event_every_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()-> newEventFragment.onSelectRepeatEveryMonth()}"
                android:layout_marginBottom="10sp"
                android:text="@string/everymonth"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginEnd="30dp"
                android:background="#c0c0c0" />

            <TextView
                android:id="@+id/new_event_every_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:onClick="@{()-> newEventFragment.onSelectRepeatEveryYear()}"
                android:text="@string/everyyear"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>