<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_calendar_main"
    tools:context=".ui.calendar.CalendarFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.cmpt370_9mare.ui.calendar.CalendarViewModel" />

        <variable
            name="calendarFragment"
            type="com.example.cmpt370_9mare.ui.calendar.CalendarFragment" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/button_last_month"
                        android:maxWidth="30dp"
                        android:maxHeight="30dp"
                        android:onClick="@{()-> calendarFragment.goToPreviousMonth()}"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                    <TextView
                        android:id="@+id/showMonthYear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@{viewModel.monthYearText}"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/next_month_calendar"
                        android:maxWidth="30dp"
                        android:maxHeight="30dp"
                        android:onClick="@{()->calendarFragment.goToNextMonth()}"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/month_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sunday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/monday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tuesday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wednesday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/thursday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/friday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/saturday"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/month_calendar_grid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="18dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:listData="@{viewModel.daysOfTheMonth}"
                    app:spanCount="7"
                    tools:itemCount="35"
                    tools:listitem="@layout/calendar_cell_layout" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_between_elements"
                    android:layout_marginBottom="@dimen/margin_between_elements"
                    android:contentDescription="@string/add_new_item"
                    android:src="@android:drawable/ic_input_add"
                    app:tint="@android:color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:padding="16dp"
                    tools:listitem="@layout/event_view" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>






