<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cmpt370_9mare.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.cmpt370_9mare.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar"
        >
        <action
            android:id="@+id/action_navigation_calendar_to_createEventFragment"
            app:destination="@id/createEventFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.cmpt370_9mare.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_createEventFragment"
            app:destination="@id/createEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cmpt370_9mare.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/createEventFragment"
        android:name="com.example.cmpt370_9mare.ui.event.CreateEventFragment"
        android:label="CreateEventFragment" >
        <action
            android:id="@+id/action_createEventFragment_to_navigation_calendar"
            app:destination="@id/navigation_calendar"
            app:popUpTo="@id/navigation_calendar"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_createEventFragment_to_newEventFragment"
            app:destination="@id/newEventFragment" />
        <argument
            android:name="eventId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/newEventFragment"
        android:name="com.example.cmpt370_9mare.ui.event.NewEventFragment"
        android:label="NewEventFragment" >
        <action
            android:id="@+id/action_newEventFragment_to_createEventFragment"
            app:destination="@id/createEventFragment"
            app:popUpTo="@id/createEventFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>